backend/feat: operation ids
